[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Oleg Kharitonov <o_kharitonov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
